--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -127,7 +127,8 @@ pre {
   padding: 10px; }
   .content .title {
     background: #fff;
-    display: inline-block; }
+    display: inline-block;
+    margin-top: 20px; }
     .content .title h3 {
       margin-bottom: 0px;
       color: #000;
