--- a/assets/stylesheets/index.scss
+++ b/assets/stylesheets/index.scss
@@ -150,6 +150,7 @@ pre {
   .title {
     background: #fff;
     display: inline-block;
+    margin-top: 20px;
 
     h3 {
       margin-bottom: 0px;
