--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -122,7 +122,7 @@ a {
   cursor: default; }
 
 pre {
-  color: #a9d3ab; }
+  color: #ff5c5c; }
 
 .content {
   font-family: 'Source Code Pro', monospace;
